trunk/Archive2/aa/44a5cac73529db/output
main.cpp:105:46: error: unexpected type name 'hardware_exception': expected expression
    throw_and_show([&] { handle_motion_error(hardware_exception, f); });
                                             ^
1 error generated.
